corrected spacing in mobile view

--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,6 @@ header {
     padding-bottom: 30px;
 }
 
-span {
-    padding-bottom: 10px;
-}
-
 nav ul {
     flex-direction: column;
     justify-content: flex-start;
@@ -30,7 +26,7 @@ nav ul {
 }
 
 nav ul li {
-    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 nav ul li a {
